[package]
name = "rpm-builder"
version = "0.2.1"
authors = [
    "Daniel Alley <dalley@redhat.com",
    "Rene Richter <richterrettich@gmail.com>",
]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/rpm-rs/rpm-builder"
repository = "https://github.com/rpm-rs/rpm-builder"
keywords = ["RPM", "packaging"]
categories = ["parsing", "development-tools"]
description = "A simple Rust CLI utility for creating simple RPMs"

[dependencies]
rpm = { version = "0.18.4", default-features = false, features = ["zstd-compression", "gzip-compression", "signature-pgp"] }
clap_derive = { version = "4.5" }
chrono = "0.4"
regex = "1"
clap = "4.5.47"
anyhow = "1.0.99"

[dev-dependencies]
assert_cmd = "2.0.17"
tempdir = "0.3.7"
predicates = "3.1.3"
pretty_assertions = "1.4.1"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rpm-builder", dest = "/usr/bin/rpm-builder", mode = "755" },
]

[profile.release]
strip="debuginfo"
lto = "thin"
